tests/baselines/reference/thisInStatics.errors.txt
tests/cases/compiler/thisInStatics.ts(6,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/thisInStatics.ts (1 errors) ====
    class C {
        static f() {
            var y/*1*/ = this;
        }
    
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var y/*2*/ = this;
            return y;
        }
    }